[FIX] l10n_us_check_printing: Printed checks
US checks have to follow strict rules regarding positioning
We use the template shown here to print:
https://www.checkdepot.net/checks/laser/Odoo.htm

Every page is divided in 3: Top Middle & Bottom
- Top will be the official document, printed only once with
all the information about customer & amount.
- Middle & Bottom are informal, showing invoices in tables
with amount & number.

Commit is:
- Avoiding overlapping of the total amount over the tables of
invoices,
- Correcting the display of '...' in last line if setting
no multipage is disabled.
- Aligning the Seq number with the date & the customer name
on same line for minipage 2 and 3.

Limitation is set to show 1 invoice per line (max 9):
 if more & multiline setting > add on following page(s)
 if more & no multiline setting > show 8 & 9th row with '...'
 if less & multiline / not multiline > no impact.

Was nicely tested by customer (github: cw-mswanson) & JOV

opw-2123856
opw-1941278 of JUC

closes odoo/enterprise#7167

X-original-commit: d28e66c02abfb5f31927b1a3ca0f7cfa12cd20be

--- a/l10n_us_check_printing/static/src/scss/report_check_commons.scss
+++ b/l10n_us_check_printing/static/src/scss/report_check_commons.scss
@@ -40,7 +40,6 @@
 
     .ckus_stub .sequence_number {
         height: 0.3in;
-        margin-bottom: 0.1in;
     }
 
     .ckus_stub .summary_line {
@@ -58,7 +57,6 @@
 
     .ckus_stub .stub_total_amount {
         position: absolute;
-        bottom: 0.38in;
         right: 0.1in;
         text-align: right;
         font-weight: bold;
